<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="#E0F8F5">

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama_menu"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stok" />

        <TextView
            android:id="@+id/tvRevenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pendapatan" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
