<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="#E0F8F5">

        <TextView
            android:id="@+id/tvNamaBarang"
            android:text="@string/nama_barang"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvHargaBarang"
            android:text="@string/harga"
            android:textColor="#666"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvStokBarang"
            android:text="@string/stok"
            android:textSize="12sp"
            android:textColor="#888"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
